--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "colors": "^1.4.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
